# Clion_C_Language

./: .gitignore  CMakeLists.txt
base/: osplatformutil.h
chapter1/: CMakeLists.txt  cubage.c  hello.c
chapter10/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  21.c  22.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  CMakeLists.txt
chapter11/: CMakeLists.txt
chapter12/: CMakeLists.txt
chapter13/: CMakeLists.txt
chapter14/: CMakeLists.txt
chapter15/: CMakeLists.txt
chapter16/: CMakeLists.txt
chapter3/: CMakeLists.txt
chapter3/1/: ShowChar.c
chapter3/10/: Static.c
chapter3/11/: Register.c
chapter3/12/: Extern1.c  Extern2.c
chapter3/13/: Complex.c
chapter3/16/: test3.c
chapter3/2/: ShowChars.c
chapter3/3/: circle.c
chapter3/4/: IntStyle.c
chapter3/5/: FloatStyle.c
chapter3/6/: DoubleStyle.c
chapter3/7/: LongDouble.c
chapter3/8/: Char.c
chapter3/9/: Auto.c
chapter4/: CMakeLists.txt
chapter4/1/: Expression.c
chapter4/10/: Complex.c
chapter4/11/: test1.c
chapter4/12/: test2.c
chapter4/2/: BeginValue.c
chapter4/3/: Vary.c
chapter4/4/: CalculateExp.c
chapter4/5/: Priority.c
chapter4/6/: DecAndInc.c
chapter4/7/: CompareFunc.c
chapter4/8/: Logic.c
chapter4/9/: comma.c
chapter5/: CMakeLists.txt
chapter5/1/: PutChar.c
chapter5/10/: Area.c
chapter5/11/: Convert.c
chapter5/2/: GetChar.c
chapter5/3/: GetCharLess.c
chapter5/4/: PutString.c
chapter5/5/: GetString.c
chapter5/6/: Printf.c
chapter5/7/: Addition.c
chapter5/8/: ScanfFunc.c
chapter5/9/: MoreScanf.c
(+142 files in other folders)
