#chapter3
ADD_EXECUTABLE(chapter3-1 1/ShowChar.c)
ADD_EXECUTABLE(chapter3-2 2/ShowChars.c)
ADD_EXECUTABLE(chapter3-3 3/circle.c)
ADD_EXECUTABLE(chapter3-4 4/IntStyle.c)
ADD_EXECUTABLE(chapter3-5 5/FloatStyle.c)
ADD_EXECUTABLE(chapter3-6 6/DoubleStyle.c)
ADD_EXECUTABLE(chapter3-7 7/LongDouble.c)
ADD_EXECUTABLE(chapter3-8 8/Char.c)
ADD_EXECUTABLE(chapter3-9 9/Auto.c)
ADD_EXECUTABLE(chapter3-10 10/Static.c)
ADD_EXECUTABLE(chapter3-11 11/Register.c)
ADD_EXECUTABLE(chapter3-12 12/Extern1.c)
ADD_EXECUTABLE(chapter3-13 13/Complex.c)